--- a/ASSETS/css/style.css
+++ b/ASSETS/css/style.css
@@ -1,8 +1,6 @@
 body {
 	background-image: url("../images/bananas.png");
 	margin: auto;
-
-
 }
 
 .headblock{
@@ -10,6 +8,7 @@ body {
 	border-bottom-style: solid;
 	border-bottom-width: 2px;
 	border-bottom-color: gray;
+	margin-bottom: 40px;
 
 	
 	
@@ -24,12 +23,13 @@ header {
 h1 {
 	background-color: #4aaaa5;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 40px;
 	float: left;
 	margin-top: 0px;
 	margin-bottom: 0px;
 	line-height: 50px;
 	height: 50px;
-	margin-left: 10px;
+	
 	color: white;
 	padding: 20px 30px;
 }
@@ -86,7 +86,7 @@ section {
 	float: left;
 	overflow: auto;
 	clear: left;
-	margin: 10px;
+	
 	margin-bottom: 400px;
 	border-style: solid;
 	border-width: 1px;
@@ -96,7 +96,7 @@ section {
 
 article{
 	margin: 0px;
-	padding: 30px;
+	padding: 25px;
 }
 
 h2 {
@@ -104,13 +104,15 @@ h2 {
 	border-bottom-width: 2px;
 	border-bottom-color: gray;
 	margin: 0px;
-	padding-bottom: 20px;
+	padding-bottom: 25px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 35px;
 	color: #4aaaa5;
 }
 
 article > p {
-	line-height: 30px;
+	line-height: 35px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .profilepic1 {
@@ -126,12 +128,39 @@ article > p {
 	width: 225px;
 }
 
+form {
+	margin-top: 20px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
+
+}
+
+input {
+	margin: 5px 0px 10px 0px;
+	padding: 10px;
+	width: 575px;
+	
+	color: gray;
+}
+
+.messageclass{
+	height: 200px;
+}
+
+.submitbutt {
+	width: 80px;
+	background-color: #4aaaa5;
+	color: white;
+}
+
+
+
 aside {
 	width: 270px;
 	background-color: #ffffff;
 	float: right;
 	overflow: auto;
-	margin-top: 10px;
+	
 	border-style: solid;
 	border-width: 1px;
 	border-color: gray;
@@ -139,7 +168,7 @@ aside {
 }
 
 .asideblock{
-	padding: 20px;
+	padding: 20px;	
 }
 
 h3 {
@@ -150,16 +179,78 @@ h3 {
 	border-bottom-color: gray;
 	text-align: center;
 	margin: 0px;
-	padding: 0px 20px 20px 20px;
+	padding: 10px 20px 20px 20px;
+	font-size: 20px;
 }
 
+.opacity{
+	opacity: 0.25;
+	float: left;
+}
+
+.portboxleft{
+	overflow: auto;
+	margin-top: 15px;
+	margin-bottom: 30px;
+	margin-left: 40px;
+	float: left;
+	
+}
+
+.portboxright{
+	overflow: auto;
+	margin-top: 15px;
+	margin-bottom: 30px;
+	margin-right: 40px;
+	float: right;
+	
+}
+
+.portimg{
+	overflow: auto;
+	background-image: url(../images/coolfrog.bmp);
+	background-repeat: no-repeat;
+	width: 220px;
+	height: 220px;
+	margin-bottom: 30px;
+	
+
+
+	
+
+}
+
+h6 {
+	background-color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 25px;
+	margin-top: 150px;
+	margin-bottom: 0px;
+	color: white;
+	padding: 10px 20px;
+	text-align: center;
+	width: inherit;
+	
+
+}
 
 .social{
 	padding: 20px 5px 5px 5px;
+	overflow: auto;
+	display: inline-block;
+	
 }
 
 .medialink{
-	padding: 0px 7px;
+	
+	padding: 0px 0px;
+	width: 26%;
+	height: auto;
+	margin-left: 8px;
+	margin-right: 8px;
+	float: left;
+
+	
 }
 
 .footblock{
@@ -177,10 +268,21 @@ h3 {
    	left: 0;
    	bottom: 0;
    	width: 100%;
+ 	
 }
+
+.footimg{
+	position: fixed;
+   	right: 0;
+   	bottom: 0;
+   	width: 10%;
+
+}
+
 footer {
  	margin: auto;
  	width: 960px;
- 	
-}
+ 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+ }
+
 
